--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,11 @@
 multiplatform
 
 - pass hostname to container and patch /etc/hosts
-   does docker know its own host name?
+   does docker know its own host name? 
+   
+   see --add-host on docker run
+   
+- use git branches as build context (ohhhh)
 
 - why does it need UDP for region handshake
 
